--- a/app/components/pages/tasklist/_style.sass
+++ b/app/components/pages/tasklist/_style.sass
@@ -31,6 +31,7 @@
     margin-bottom: 10px
     .text-14
       color: #ffffff
+      line-height: 1
     button
       display: flex
       justify-content: space-between
@@ -723,7 +724,7 @@
   &-price
     position: absolute
     right: 20px
-    top: 20px
+    top: 23px
     font-family: "SegoeUI-Bold", sans-serif
     font-size: 24px
     line-height: 32px
