--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1257,6 +1257,7 @@ button.mfp-close:hover
 @import "../components/pages/review/style"
 @import "../components/pages/settings/style"
 @import "../components/pages/tasklist/style"
+@import "../components/pages/feedback/style"
 .show-tablet, .show-mob
   display: none
 @import "media"
