--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -953,6 +953,32 @@
     padding: 0
   .finance-history .select
     width: 139px
+  .feedback
+    .card-container
+      padding-top: 20px
+    .card-price
+      top: 22px
+  .card-gray
+    font-size: 10px
+    padding: 2px 12px 3px
+  .feedback-filter-top
+    padding: 20px 10px 10px 10px
+  .feedback-filter .select
+    min-width: 100%
+    margin-top: 10px
+  .feedback-menu
+    padding: 0
+  .feedback-link
+    padding: 10px 10px 10px 20px
+    .text-14
+      @include small-text
+  .feedback-link:before
+    border-width: 5px
+  .feedback-block
+    padding: 20px 10px
+  .feedback-close
+    width: 30px
+    height: 30px
 @media only screen and (max-width : 767px)
   .forcustomer-info-content:before
     height: 43px
@@ -2056,6 +2082,33 @@
     padding: 10px
     background: #F5F6FA
     border-radius: 0 0 5px 5px
+  .feedback-filter
+    max-width: 225px
+    border-radius: 0 0 5px 5px
+    .select
+      padding: 0 10px
+    .select:before
+      right: 21px
+    .select-drop
+      width: calc(100% - 20px)
+      left: 10px
+  .feedback-filter-top
+    padding: 0 0 10px 0
+    .title-18
+      background: #6C7185
+      box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.1)
+      color: #FFFFFF
+      padding: 10px 10px 11px 10px
+      width: 100%
+  .feedback-filter-close
+    display: block
+  .feedback-link
+    padding: 10px 20px
+    .text-14
+      font-size: 10px
+      line-height: 13px
+  .feedback-link:before
+    border-color: transparent #495F94 transparent transparent
 @media only screen and (max-width : 480px)
   .customer-verified-row
     width: 50%
