--- a/app/components/pages/forcustomer/profile(forcustomer).html
+++ b/app/components/pages/forcustomer/profile(forcustomer).html
@@ -487,43 +487,119 @@
 										<button type="button" class="forcustomer-awards-arrow forcustomer-awards-next"><svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.0088 6.05743C16.3017 5.76454 16.3017 5.28966 16.0088 4.99677L11.2359 0.223799C10.943 -0.0690947 10.4681 -0.0690947 10.1752 0.223799C9.88232 0.516692 9.88232 0.991566 10.1752 1.28446L14.4179 5.5271L10.1752 9.76974C9.88232 10.0626 9.88232 10.5375 10.1752 10.8304C10.4681 11.1233 10.943 11.1233 11.2359 10.8304L16.0088 6.05743ZM0.478516 6.2771H15.4785V4.7771H0.478516V6.2771Z" fill="#3D404C"/></svg></button>
 									</div>
 								</div>
-								<div class="forcustomer-awards-slider">
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
-									<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
-										<span class="forcustomer-awards-span"></span>
-										<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
-									</a>
+								<div class="forcustomer-awards-container">
+									<div class="forcustomer-awards-slider swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+											<div class="swiper-slide">
+												<a href="img/awards-big.jpg" class="forcustomer-awards-slide" title="Краткое описание проделаной работы">
+													<span class="forcustomer-awards-span"></span>
+													<img src="img/awards.jpg" alt="Certificates and awards" class="forcustomer-awards-img">
+												</a>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="customer-verified">
@@ -631,6 +707,7 @@
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
+	<script src="js/scrollbot.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
