--- a/app/components/pages/settings/settings(notifications).html
+++ b/app/components/pages/settings/settings(notifications).html
@@ -148,6 +148,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bodyScrollLock.js"></script>
 <script src="js/libs.min.js"></script>
+<script src="js/scrollbot.js"></script>
 <script src="js/common.js"></script>
 </body>
 </html>
