--- a/app/components/pages/customer/profile(customer).html
+++ b/app/components/pages/customer/profile(customer).html
@@ -256,6 +256,7 @@
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
+	<script src="js/scrollbot.js"></script>
     <script src="js/common.js"></script>
 </body>
 </html>
