--- a/app/components/pages/forcustomer/_style.sass
+++ b/app/components/pages/forcustomer/_style.sass
@@ -349,9 +349,11 @@
       justify-content: space-between
       .text
         font-family: "SegoeUI-SemiBold", sans-serif
+    &-container
+      padding-left: 20px
     &-slider
-      padding: 20px 0 20px 20px
-    .slick-slide
+      padding: 20px 0
+    .swiper-slide
       width: 100px
       margin-right: 10px
       padding: 0
@@ -384,6 +386,7 @@
     &-arrow
       padding: 5px
       position: inherit
+      display: flex
       margin: 0
       svg
         width: 10px
