--- a/app/components/pages/review/review.html
+++ b/app/components/pages/review/review.html
@@ -611,6 +611,7 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/libs.min.js"></script>
+<script src="js/scrollbot.js"></script>
 <script src="js/common.js"></script>
 </body>
 </html>
