--- a/app/components/pages/seo/_style.sass
+++ b/app/components/pages/seo/_style.sass
@@ -316,6 +316,7 @@
     display: none
     margin-bottom: 10px
 .masters
+  overflow: hidden
   &-search
     position: relative
     .text
@@ -338,10 +339,15 @@
   &-top
     display: flex
     align-items: center
-    max-width: calc(100% - 100px)
+    justify-content: space-between
     .title-18
       margin-right: 25px
       white-space: nowrap
+    &-left
+      display: flex
+      align-items: center
+      width: calc(100% - 90px)
+
   &-search
     display: flex
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1)
@@ -433,6 +439,9 @@
       border-radius: 11px
   &-slider
     position: relative
+    margin-top: 20px
+    .swiper-container
+      overflow: visible!important
   &-arrow
     position: absolute
     top: 0
@@ -462,6 +471,7 @@
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1)
   border-radius: 5px
   position: relative
+  transition: all 0.3s ease
 .price
   background: #FFFFFF
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1)
@@ -615,35 +625,6 @@
   width: 100%
   height: auto
   margin-bottom: 30px
-.slick-slide
-  overflow: visible!important
-  padding: 20px 0 30px
-.slick-slide .slide
-  display: block
-  transform: translate(-64%, 0) scale(.7)
-  transition: all .4s ease
-  opacity: .5
-.slick-slide.lt2 .slide
-  transform: translate(64%, 0) scale(.7)
-.slick-slide.lt1 .slide
-  opacity: .5
-  transform: translate(64%, 0) scale(.7)
-.slick-slide.gt1 .slide
-  opacity: .5
-  transform: translate(-64%, 0) scale(.7)
-.slick-slide.gt2 .slide
-  transform: translate(-64%, 0) scale(0.7)
-
-.slick-slide.slick-center .slide
-  z-index: 1
-  transform: scale(1)
-  opacity: 1
-  color: #e67e22
-
-.slick-slide
-  overflow: hidden
-  width: 830px
-  outline: none
 
 .task
   display: flex
@@ -962,13 +943,6 @@
   100%
     border-color: transparent
 
-.gt1:hover
-  .masters-arrow-next
-    opacity: 1
-.lt1:hover
-  .masters-arrow-prev
-    opacity: 1
-
 .btn-hide
   display: none
 .img-popap-hover:after
@@ -999,3 +973,26 @@
     margin-bottom: 0
   &:first-child, &:nth-child(2)
     margin-bottom: 10px
+
+.masters-btns
+  position: relative
+  display: flex
+.masters
+  .swiper-slide
+    position: relative
+    .slide
+      margin-left: -25px
+    &:before
+      content: ''
+      position: absolute
+      left: 0
+      top: 0
+      width: 100%
+      height: 100%
+      background: linear-gradient(rgba(#F5F6FA, 0.6))
+      z-index: 2
+      transition: all 0.3s ease
+      pointer-events: none
+    &.swiper-slide-active
+      &:before
+        background: none
