--- a/app/components/pages/settings/_style.sass
+++ b/app/components/pages/settings/_style.sass
@@ -106,8 +106,26 @@
       padding: 10px 10px 11px
       text-align: center
       border-bottom: 1px solid #F5F6FA
+
+  section
+    @include container
+    margin-bottom: 30px
+    &:last-child
+      margin-bottom: 0
+    &.finance-feedback
+      background: none
+      box-shadow: none
+
   &-feedback
-    padding-bottom: 20px
+    &-container
+      @include container
+      padding-bottom: 20px
+      .text-small
+        color: #6C7185
+        display: none
+        margin-right: 10px
+    .title-18
+      margin-bottom: 10px
     .btn-orange
       margin: 5px auto 0
       display: block
@@ -117,20 +135,9 @@
       display: flex
       justify-content: space-between
       padding: 14px 20px
-    &-desktop
-      .text, .text-14
-        padding: 0 30px 0 0
-        color: #ffffff
-        width: 100%
-        &:first-child
-          width: 343px
-        &:nth-child(2)
-          max-width: 174px
-        &:nth-child(3)
-          max-width: 184px
-        &:last-child
-          max-width: 129px
-          padding: 0
+    .text, .text-14
+      padding: 0 30px 0 0
+      color: #ffffff
     &-table
       padding: 0 20px
     &-col
@@ -144,16 +151,28 @@
       margin-top: 10px
       display: flex
       justify-content: space-between
+    &-row, &-flex
+      .text-14, .text
+        display: flex
+        justify-content: space-between
+        align-items: center
+        width: 100%
+        &:first-child
+          max-width: 174px
+        &:nth-child(2)
+          max-width: 184px
+        &:last-child
+          max-width: 129px
+          padding: 0
+      .finance-feedback-first
+        max-width: 330px!important
+    &-drop, .finance-feedback-flex
+      display: flex
+      width: calc(100% - 330px)
     .text-14
       color: #6C7185
     &-last
       border: none
-    &-mob
-      display: none
-      .text-small
-        @include small-text
-        display: flex
-        align-items: center
     &-i
       width: 10px
       height: 10px
@@ -200,12 +219,6 @@
         margin-right: 10px
       .text-14
         font-family: "SegoeUI-SemiBold", sans-serif
-  section
-    @include container
-    margin-bottom: 30px
-    &:last-child
-      margin-bottom: 0
-
 .tariff
   position: relative
   width: calc(25% - 23px)
