--- a/app/sass/libs.sass
+++ b/app/sass/libs.sass
@@ -1,3 +1,3 @@
 @import "../libs/jquery-ui-1.12.1.custom/jquery-ui"
-@import "../libs/slick-master/slick/slick"
+@import "../libs/swiper-master/package/css/swiper.min"
 @import "../libs/Magnific-Popup-master/dist/magnific-popup"
