--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -119,6 +119,11 @@ input, textarea
   outline: none
   color: #505050
   appearance: none
+input[type='number']
+  -moz-appearance: textfield
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
+  -webkit-appearance: none
 
 button
   cursor: pointer
